[project]
name = "group-a-esp32-controller"
version = "0.1.0"
description = ""
authors = [
    {name = "sontungN",email = "s3979348@rmit.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
